[package]
name = "walrus-utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]
backoff = ["dep:anyhow", "dep:rand", "dep:serde", "dep:serde_with", "dep:tracing", "tokio/time"]
config = ["dep:anyhow", "dep:home", "dep:serde", "dep:tracing"]
default = []
metrics = []
test-utils = ["dep:tempfile", "tokio/sync"]

[dependencies]
anyhow = { workspace = true, optional = true }
async-channel = { workspace = true, optional = true }
home = { workspace = true, optional = true }
prometheus = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
serde_with = { workspace = true, optional = true }
tempfile = { workspace = true, optional = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"], optional = true }
tokio-util = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true
